--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                         class="fab fa-instagram"></i></a>
                 <a href="https://github.com/alexgouveiadearaujo" alt="icon-github" target="_blank"><i
                         class="fab fa-github"></i></a>
+                <a href="https://codepen.io/alexgouveioadearaujo" alt="icon-codepen" target="_blank"><i class="fab fa-codepen"></i></i></a>
             </div>
         </div>
 
