edit section sobre

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img class="avatar" src="img/avatarrr.jpeg" alt="foto-avatar">
                 </figure>
             </div>
-            <p data-anime="dig">Olá, meu nome é Alexsandro Araújo.</p>
+            <p data-anime="dig">Hellooo! Welcome to my page.</p>
 
         </section>
 
@@ -51,9 +51,10 @@
             <div class="sobre__texto">
 
                 <h1>Sobre</h1>
-                <p>Estudante de Ciência da computação;</p>
+                <p>Me chamo Alexsandro Araújo;</p>
+                <p>Sou estudante de Ciência da computação;</p>
                 <p>Aspirante a desenvolvedor Front-End;</p>
-                <p>Site desenvolvido com finalidade de mostrar portifólio profissional.</p>
+                <p>Página desenvolvida com finalidade de mostrar portifólio profissional.</p>
             </div>
         </section>
     </header>
