--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img class="avatar" src="img/avatarrr.jpeg" alt="foto-avatar">
                 </figure>
             </div>
-            <p data-anime="dig">Hellooo! Welcome to my page.</p>
+            <p data-anime="dig" id="efeitoDigitando">Hellooo! Welcome to my page.</p>
 
         </section>
 
